--- a/Life of Muslim/View/Base.lproj/Main.storyboard
+++ b/Life of Muslim/View/Base.lproj/Main.storyboard
@@ -626,7 +626,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="তাসবিহ গণনার জন্যে যে কোন স্থানে ক্লিক করুন" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zsn-jc-y9k">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="তাসবিহ গণনার জন্যে চাপ দিন " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zsn-jc-y9k">
                                 <rect key="frame" x="20" y="719" width="374" height="94"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="94" id="lDM-n1-GJY"/>
@@ -666,13 +666,13 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3B-Nw-Nbx">
                                 <rect key="frame" x="141.5" y="658" width="131" height="53"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="53" id="P4R-pd-WO2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
                                 <state key="normal" title="নতুন গণনা">
-                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="0.91695092430000003" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="newCountButton:" destination="Srh-F9-Z0F" eventType="touchUpInside" id="han-43-Hhe"/>
@@ -680,7 +680,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aE1-Ts-Znz"/>
-                        <color key="backgroundColor" red="0.14063165668063674" green="0.44460411269430056" blue="0.12993120757061991" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
                         <constraints>
                             <constraint firstItem="0U3-xw-O1q" firstAttribute="top" secondItem="aE1-Ts-Znz" secondAttribute="top" id="JcE-Jj-tk4"/>
                             <constraint firstItem="Zsn-jc-y9k" firstAttribute="bottom" secondItem="aE1-Ts-Znz" secondAttribute="bottom" id="YC6-A2-QoP"/>
@@ -933,8 +933,11 @@
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
